<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_nav_draw_offer"
            android:title="@string/nav_drawer_offers_title" />
        <item
            android:id="@+id/nav_converter"
            android:icon="@drawable/ic_nav_draw_converter"
            android:title="@string/nav_drawer_converter_title" />
    </group>

    <group android:checkableBehavior="single">

    </group>

    <item android:title="@string/nav_drawer_separator">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_draw_settings"
                android:title="@string/nav_drawer_settings_title" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_nav_draw_help"
                android:title="@string/nav_drawer_help_title" />
        </menu>
    </item>

</menu>
