<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.martin.nextflight.SettingsActivity$CurrencyPreferenceFragment"
        android:icon="@drawable/ic_nav_draw_converter"
        android:title="@string/pref_header_currency"/>

    <header
        android:fragment="com.example.martin.nextflight.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.martin.nextflight.SettingsActivity$LanguagePreferenceFragment"
        android:icon="@drawable/ic_language_black_24px"
        android:title="@string/pref_header_language" />

</preference-headers>
